--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^12.19.6",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@unform/core": "^2.1.3",
+    "@unform/web": "^2.1.3",
     "polished": "^4.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -17,7 +19,8 @@
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.31.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,6 +48,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.6",
-    "@types/styled-components": "^5.1.4"
+    "@types/styled-components": "^5.1.4",
+    "@types/yup": "^0.29.9"
   }
 }
