--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.2.9",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
@@ -12,6 +13,7 @@
     "@types/react-dom": "^16.9.10",
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
+    "graphql": "^15.4.0",
     "polished": "^4.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
